[0, 14, 2]: 2017-03-23
  - fix for old default pip on Ubuntu 14.04 (reported by Sébastien Maccagnoni-Munch)

0.14.1: 2017-03-22
  - fix Text not available on 3.5.0 and 3.5.1 (reported by Charles Bouchard-Légaré)

0.14.0: 2017-03-21
  - updates for mypy --strict
  - preparation for moving away from inheritance in Loader and Dumper, calls from e.g.
    the Representer to the Serializer.serialize() are now done via the attribute
    .serializer.serialize(). Usage of .serialize() outside of Serializer will be
    deprecated soon
  - some extra tests on main.py functions

0.13.14: 2017-02-12
  - fix for issue 97: clipped block scalar followed by empty lines and comment
    would result in two CommentTokens of which the first was dropped.
    (reported by Colm O'Connor)

0.13.13: 2017-01-28
  - fix for issue 96: prevent insertion of extra empty line if indented mapping entries
    are separated by an empty line (reported by Derrick Sawyer)

0.13.11: 2017-01-23
  - allow ':' in flow style scalars if not followed by space. Also don't
    quote such scalar as this is no longer necessary.
  - add python 3.6 manylinux wheel to PyPI

0.13.10: 2017-01-22
  - fix for issue 93, insert spurious blank line before single line comment
    between indented sequence elements (reported by Alex)

0.13.9: 2017-01-18
  - fix for issue 92, wrong import name reported by the-corinthian

0.13.8: 2017-01-18
  - fix for issue 91, when a compiler is unavailable reported by Maximilian Hils
  - fix for deepcopy issue with TimeStamps not preserving 'T', reported on
    `StackOverflow Q&A <http://stackoverflow.com/a/41577841/1307905>`_ by
    `Quuxplusone <http://stackoverflow.com/users/1424877/quuxplusone>`_


0.13.7: 2016-12-27
  - fix for issue 85, constructor.py importing unicode_literals caused mypy to fail
    on 2.7 (reported by Peter Amstutz)

0.13.6: 2016-12-27
  - fix for issue 83, collections.OrderedDict not representable by SafeRepresenter
    (reported by Frazer McLean)
