@@ -53,7 +53,7 @@ implicit_resolvers = [
     ([(1, 1)],
         u'tag:yaml.org,2002:int',
         re.compile(u'''^(?:[-+]?0b[0-1_]+
-        |[-+]?0o?[0-7_]+
+        |[-+]?0?[0-7_]+
         |[-+]?(?:0|[1-9][0-9_]*)
         |[-+]?0x[0-9a-fA-F_]+
         |[-+]?[1-9][0-9_]*(?::[0-5]?[0-9])+)$''', re.X),
