@@ -1,3 +1,8 @@
+[0, 14, 3]: 2017-03-31
+  - fix for 0o52 not being a string in YAML 1.1 (reported on
+    `StackOverflow Q&A 43138503><http://stackoverflow.com/a/43138503/1307905>`_ by
+    `Frank D <http://stackoverflow.com/users/7796630/frank-d>`_
+
 [0, 14, 2]: 2017-03-23
   - fix for old default pip on Ubuntu 14.04 (reported by Sébastien Maccagnoni-Munch)
 
